--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
+
+#---
+spring.config.activate.on-profile=mariadb
+spring.datasource.url=jdbc:mariadb://localhost:3306/dev_db
+spring.datasource.username=root
+spring.datasource.password=1234
